# roi-calc

./: Cargo.toml  README.md
.VSCodeCounter/2023-01-07_23-55-48/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-01-07_23-57-40/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-01-11_00-28-56/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-01-11_11-01-41/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-01-11_21-19-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
data/: building_info.yaml  global_market_prices.yaml  recipes.yaml
src/: app.rs  lib.rs  main.rs
src/backend/: building.rs  mod.rs  money.rs  productivity.rs  recipe.rs
src/interface/: mod.rs
src/simulator/: building.rs  mod.rs  money.rs  productivity.rs  recipe.rs
