[package]
name = "rise_of_industry_caculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
once_cell = "1.17.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_yaml = "0.9.16"
